[package]
name = "tmp-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = "0.7.0"



# Stuff for Zyansheep, I use NixOS btw :)
[package.metadata.nix]
build = true
app = true
[workspace.metadata.nix]
cCompiler = "gcc12"
nativeBuildInputs = [
	"cargo-edit",
	"pkgconfig",
	"cmake",
	"mold",
]
buildInputs = [
	# Window and Input
	"xorg.libXcursor",
	"xorg.libXrandr",
	"xorg.libXi",

	# Vulkan
	"vulkan-tools",
	"vulkan-headers",
	"vulkan-loader",
	"vulkan-validation-layers",
	"alsaLib", # Sound support
	"udev", # device management
	# lld # fast linker
]
runtimeLibs = []
toolchain = "nightly"
devshell = {name = "rust-shell" }
